<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.cksharma.myfilescanner.MainActivity"
    tools:showIn="@layout/activity_main">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="12">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/file_data"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/ext_data"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:orientation="horizontal"
                android:weightSum="2">


                <fragment
                    android:id="@+id/fragment_file_data"
                    android:name="com.example.cksharma.myfilescanner.FileDataFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:layout="@layout/fragment_file_data" />

                <fragment
                    android:id="@+id/fragment_ext_data"
                    android:name="com.example.cksharma.myfilescanner.ExtDataFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:layout="@layout/fragment_file_data" />
            </LinearLayout>

            <Button
                android:id="@+id/button_pause"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_pause"
                android:weightSum="1" />

            <Button
                android:id="@+id/button_start"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_start"
                android:weightSum="1" />

            <Button
                android:id="@+id/button_share"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_share"
                android:weightSum="1" />


            <TextView
                android:id="@+id/perc_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:weightSum="1" />

            <TextView
                android:id="@+id/avg_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:weightSum="1" />


        </LinearLayout>

    </ScrollView>


</RelativeLayout>
